--- a/src/components/BottomBar.module.css
+++ b/src/components/BottomBar.module.css
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 12px 12px 28px; 
+    padding: 12px 12px 28px;
     /* background-color: #333;  */
     color: #fff;
     background: rgb(0, 0, 0);
@@ -47,6 +47,15 @@
     color: inherit;
     font-size: 1.5rem;
     cursor: pointer;
+    /* padding-left: 18px; */
+}
+
+.paddingLeft {
+    padding-left: 18px;
+}
+
+.paddingRight {
+    padding-right: 18px;
 }
 
 .centerButton {
