--- a/src/screens/GalleryCatScreen.module.css
+++ b/src/screens/GalleryCatScreen.module.css
@@ -38,7 +38,7 @@
 
 .galleryCatScreen__image {
     width: 33.3333%;
-    min-height: 33vh;
+    /* min-height: 33vh; */
     position: relative;
     cursor: pointer;
     overflow: hidden;
@@ -56,19 +56,20 @@
 /* Ken Burns wrapper for image effect */
 .galleryCatScreen__kenBurnsWrapper {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    aspect-ratio: 1 / 1; /* square view */
     overflow: hidden;
     position: relative;
 }
 
 .galleryCatScreen__imageImg {
     width: 100%;
-    height: 33vh;
+    height: 100%;
     object-fit: cover;
     position: absolute;
-    transform: scale(1.1) rotateX(0deg) rotateY(0deg);
+    top: 0;
+    left: 0;
     animation: galleryCatScreen__kenBurns 10s infinite alternate;
-    transition: transform 0.5s ease-in-out;
 }
 
 @keyframes galleryCatScreen__kenBurns {
@@ -191,7 +192,7 @@
 
 .image {
     width: 33.3333%;
-    min-height: 33vh;
+    /* min-height: 33vh; */
     background-color: #000;
     cursor: pointer;
 }
@@ -204,7 +205,7 @@
 .imageImg {
     width: 100%;
     object-fit: cover;
-    height: 33vh;
+    /* height: 33vh; */
     border: 7px solid #000;
 }
 
@@ -249,8 +250,13 @@
 }
 
 .galleryCatScreen__image {
+    width: 33.3333%;
+    min-height: 33vh;
+    height: 33vh;
     position: relative;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
     cursor: pointer;
 }
 
@@ -266,13 +272,20 @@
 }
 
 .galleryCatScreen__kenBurnsWrapper {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    height: 33vh;
 }
 
 .galleryCatScreen__imageImg {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
-    display: block;
+    height: 100%;
+    object-fit: cover;
+    animation: galleryCatScreen__kenBurns 10s infinite alternate;
 }
